2021-11-18  Robert Jenner  <Jenner@apple.com>

        [ Monterey ] 2 TestWebKitAPI.WebKit.DisplayName (api-tests) are constantly failing
        <rdar://80353834>

        Uneviewed test gardening.

        * TestWebKitAPI/Tests/WebKitCocoa/DisplayName.mm:
        (TestWebKitAPI::TEST):

2021-11-18  Robert Jenner  <Jenner@apple.com>

        [ Monterey ] 2 TestWebKitAPI.WebKit.DisplayName (api-tests) are constantly failing
        <rdar://80353834>

        Uneviewed test gardening.

        * TestWebKitAPI/Tests/WebKitCocoa/DisplayName.mm:
        (TestWebKitAPI::TEST):

2021-11-18  Jonathan Bedard  <jbedard@apple.com>

        Link Python packages to GitHub
        https://bugs.webkit.org/show_bug.cgi?id=233318
        <rdar://problem/85551201>

        Reviewed by Stephanie Lewis.

        * Scripts/libraries/resultsdbpy/resultsdbpy/__init__.py: Bump version.
        * Scripts/libraries/resultsdbpy/setup.py: Bump version, link to GitHub.
        * Scripts/libraries/webkitcorepy/setup.py: Bump version, link to GitHub.
        * Scripts/libraries/webkitcorepy/webkitcorepy/__init__.py: Bump version.
        * Scripts/libraries/webkitflaskpy/setup.py: Bump version, link to GitHub.
        * Scripts/libraries/webkitflaskpy/webkitflaskpy/__init__.py: Bump version.
        * Scripts/libraries/webkitscmpy/setup.py: Bump version, link to GitHub.
        * Scripts/libraries/webkitscmpy/webkitscmpy/__init__.py: Bump version.

2021-10-26  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][a11y] Add implementation of value interface when building with ATSPI
        https://bugs.webkit.org/show_bug.cgi?id=232300

        Reviewed by Adrian Perez de Castro.

        Add new unit test for the value interface and implement WTR value support.

        * TestWebKitAPI/Tests/WebKitGtk/TestWebKitAccessibility.cpp:
        (testValueBasic):
        (beforeAll):
        * WebKitTestRunner/InjectedBundle/atspi/AccessibilityUIElementAtspi.cpp: